--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build docker images - App1
         working-directory: ./app1
         run: |
@@ -24,6 +28,6 @@ jobs:
       - name: Build docker images - App2
         working-directory: ./app2
         run: |
-          docker build -t radekmucha/ci-cd:app1 .
-          docker push radekmucha/ci-cd:app1
+          docker build -t radekmucha/ci-cd:app2 .
+          docker push radekmucha/ci-cd:app2
  
