--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
 
     app1:
-        image: app1
+        image: radekmucha/ci-cd:app1
         container_name: app1
         restart: always  
         networks:
@@ -27,7 +27,7 @@ services:
  
 
     app2:
-        image: app2
+        image: radekmucha/ci-cd:app2
         container_name: app2
         restart: always  
         networks:
