--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
           - "443:443"
         volumes:
           - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-          - ./haproxy/localhost.pem:/etc/ssl/certs/localhost.pem
+          - ./haproxy/cert.pem:/etc/ssl/certs/cert.pem
         networks:
           - proxy-net
 
