--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -3,24 +3,22 @@ global
 	log /dev/log local0
 	log stdout format raw local0
 	user haproxy
-    group haproxy 
+	group haproxy 
 
 defaults
     timeout connect 10s
     timeout client 30s
     timeout server 30s
     log global
-    # mode http
-    # option httplog
     maxconn 3000
 	
 frontend my-load-balancer
 	bind 0.0.0.0:80
-    bind 0.0.0.0:443 ssl crt /etc/ssl/certs/localhost.pem
+	bind 0.0.0.0:443 ssl crt /etc/ssl/certs/cert.pem
 	default_backend my-application-servers
     
 backend my-application-servers
 	balance roundrobin
 	default-server check maxconn 20
-    server my-app-server-1 app1:80
+	server my-app-server-1 app1:80
 	server my-app-server-2 app2:80
